--- a/views/partials/menu.handlebars
+++ b/views/partials/menu.handlebars
@@ -18,10 +18,10 @@
 
             <div class="flex-1 h-0 pt-5 pb-4 overflow-y-auto">
                 <div class="flex-shrink-0 flex items-center px-4 justify-center">
-                    <img class="h-8 w-auto" src="./assets/images/logo.jpg" alt="Workflow">
+                    <img class="h-8 w-auto" src="/assets/images/logo.jpg" alt="Workflow">
                 </div>
                 <nav class="mt-5 px-2 space-y-1">
-                    {{#each user_menu}}
+                    {{#each loggedUser.menu}}
                         <a href="{{path}}" class="menu-item first:menu-item-active">
                             <span class="font-fa fa-fw mr-2">{{icon}}</span>{{name}}
                         </a>
@@ -33,11 +33,11 @@
                 <a href="#" class="flex-shrink-0 group block">
                     <div class="flex items-center">
                         <div>
-                            <img class="inline-block h-10 w-10 rounded-full" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
+                            <img class="inline-block h-10 w-10 rounded-full" src="{{loggedUser.avatar}}" alt="">
                         </div>
                         <div class="ml-3">
-                            <p class="text-base font-medium text-gray-700 group-hover:text-gray-900">Tom Cook</p>
-                            <p class="text-sm font-medium text-gray-500 group-hover:text-gray-700">View profile</p>
+                            <p class="text-base font-medium text-gray-700 group-hover:text-gray-900">{{loggedUser.name}}</p>
+                            {{!-- <p class="text-sm font-medium text-gray-500 group-hover:text-gray-700">View profile</p> --}}
                         </div>
                     </div>
                 </a>
@@ -54,70 +54,25 @@
     <div class="flex-1 flex flex-col min-h-0 border-r border-gray-200 bg-white">
         <div class="flex-1 flex flex-col pt-5 pb-4 overflow-y-auto">
             <div class="flex items-center flex-shrink-0 px-4 justify-center">
-                <img class="h-8 w-auto" src="./assets/images/logo.jpg" alt="Workflow">
+                <img class="h-8 w-auto" src="/assets/images/logo.jpg" alt="Workflow">
             </div>
             <nav class="deskMenu mt-5 flex-1 px-2 bg-white space-y-1">
-                {{#if isHr}}
-                    <a href="#" class="bigMenu-item">
-
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" aria-hidden="true">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
-                        </svg>
-                        Hr
+                {{#each loggedUser.menu}}
+                    <a href="{{path}}" class="bigMenu-item first:bigMenu-item-active">
+                        <span class="font-fa fa-fw mr-2">{{icon}}</span> {{name}}
                     </a>
-
-                    <a href="#" class="bigMenu-item">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" aria-hidden="true">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.354a4 4 0 110 5.292M15 21H3v-1a6 6 0 0112 0v1zm0 0h6v-1a6 6 0 00-9-5.197M13 7a4 4 0 11-8 0 4 4 0 018 0z" />
-                        </svg>
-                        Team
-                    </a>
-
-
-                {{else if isManager}}
-                    <a href="#" class="bigMenu-item bigMenu-item-active">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" aria-hidden="true">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M3 7v10a2 2 0 002 2h14a2 2 0 002-2V9a2 2 0 00-2-2h-6l-2-2H5a2 2 0 00-2 2z" />
-                        </svg>
-                        Manager
-                    </a>
-                    <a href="#" class="bigMenu-item">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" aria-hidden="true">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.354a4 4 0 110 5.292M15 21H3v-1a6 6 0 0112 0v1zm0 0h6v-1a6 6 0 00-9-5.197M13 7a4 4 0 11-8 0 4 4 0 018 0z" />
-                        </svg>
-                        Team
-                    </a>
-
-
-                {{else if isStaff}}
-                    <a href="#" class="bigMenu-item">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" aria-hidden="true">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
-                        </svg>
-                        Calendar
-                    </a>
-
-                    <a href="#" class="bigMenu-item">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" aria-hidden="true">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M20 13V6a2 2 0 00-2-2H6a2 2 0 00-2 2v7m16 0v5a2 2 0 01-2 2H6a2 2 0 01-2-2v-5m16 0h-2.586a1 1 0 00-.707.293l-2.414 2.414a1 1 0 01-.707.293h-3.172a1 1 0 01-.707-.293l-2.414-2.414A1 1 0 006.586 13H4" />
-                        </svg>
-                        Documents
-                    </a>
-
-
-                {{/if}}
-
+                {{/each}}
             </nav>
         </div>
         <div class="flex-shrink-0 flex border-t border-gray-200 p-4">
             <a href="#" class="flex-shrink-0 w-full group block">
                 <div class="flex items-center">
                     <div>
-                        <img class="inline-block h-9 w-9 rounded-full" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
+                        <img class="inline-block h-9 w-9 rounded-full" src="{{loggedUser.avatar}}" alt="">
                     </div>
                     <div class="ml-3">
-                        <p class="text-sm font-medium text-gray-700 group-hover:text-gray-900">Tom Cook</p>
-                        <p class="text-xs font-medium text-gray-500 group-hover:text-gray-700">View profile</p>
+                        <p class="text-sm font-medium text-gray-700 group-hover:text-gray-900">{{loggedUser.name}}</p>
+                        {{!-- <p class="text-xs font-medium text-gray-500 group-hover:text-gray-700">View profile</p> --}}
                     </div>
                 </div>
             </a>
