--- a/views/projectTasks.handlebars
+++ b/views/projectTasks.handlebars
@@ -1,5 +1,5 @@
 <ul role="list" class="divide-y divide-gray-200">
-    {{#each tasks}}
+    {{#each project.tasks}}
         <li class="">
             <a href="/projects/{{project_id}}/tasks/{{id}}" class="relative block bg-white py-5 px-4 hover:bg-gray-50 focus-within:ring-2 focus-within:ring-inset focus-within:ring-indigo-600 hover:ring-2 hover:ring-inset hover:ring-indigo-600">
                 <div class="flex flex-col xl:flex-row justify-between">
@@ -13,8 +13,8 @@
                     </div>
                     <div class="flex flex-col justify-end items-end">
                         <div class="flex justify-end items-center">
-                            {{!-- <img class="inline-block h-6 w-6 rounded-full ring-2 ring-white" src="{{user.avatar}}" alt="{{user.avatar}}" /> --}}
-                            <p class="ml-1 text-sm text-gray-500 truncate">Project: {{project.title}}</p>
+                            <img class="inline-block h-6 w-6 rounded-full ring-2 ring-white" src="{{user.avatar}}" alt="{{user.avatar}}" />
+                            <p class="ml-1 text-sm text-gray-500 truncate">{{user.name}}</p>
                         </div>
                         <time datetime="2021-01-27T16:35" class="flex-shrink-0 whitespace-nowrap text-sm text-gray-500">updated: {{format_date updatedAt}}</time>
                     </div>
@@ -46,7 +46,7 @@
                 <!-- Current: "z-10 bg-indigo-50 border-indigo-500 text-indigo-600", Default: "bg-white border-gray-300 text-gray-500 hover:bg-gray-50" -->
 
                 {{!-- prev button --}}
-                <a {{#if (math pagination.currentPage '!==' 1)}}href="/tasks?page={{math pagination.currentPage '-' 1}}" {{/if}} class="{{#if (math pagination.currentPage '===' 1)}}cursor-not-allowed{{/if}} px-2 py-2 rounded-l-md border border-gray-300 bg-white text-sm font-medium text-gray-500 hover:bg-gray-50">
+                <a {{#if (math pagination.currentPage '!==' 1)}}href="/projects/{{project.id}}/tasks?page={{math pagination.currentPage '-' 1}}" {{/if}} class="{{#if (math pagination.currentPage '===' 1)}}cursor-not-allowed{{/if}} px-2 py-2 rounded-l-md border border-gray-300 bg-white text-sm font-medium text-gray-500 hover:bg-gray-50">
                     <!-- Heroicon name: solid/chevron-left -->
                     <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="{{#if (math pagination.currentPage '===' 1)}}#dddddd{{else}}currentColor{{/if}}" aria-hidden="true">
                         <path fill-rule="evenodd" d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z" clip-rule="evenodd" />
@@ -57,14 +57,14 @@
                     {{#if (math this '===' '...')}}
                         <span class="px-3 pt-1 border border-gray-300 bg-white text-sm font-medium text-gray-700 select-none"> ... </span>
                     {{else if (math this '===' ../pagination.currentPage)}}
-                        <a href="/tasks?page={{this}}" class="z-10 bg-indigo-50 border-indigo-500 text-indigo-600 px-4 py-2 border text-sm font-medium"> {{this}} </a>
+                        <a href="/projects/{{../project.id}}//tasks?page={{this}}" class="z-10 bg-indigo-50 border-indigo-500 text-indigo-600 px-4 py-2 border text-sm font-medium"> {{this}} </a>
                     {{else}}
-                        <a href="/tasks?page={{this}}" class="bg-white border-gray-300 text-gray-500 hover:bg-gray-50 px-4 py-2 border text-sm font-medium"> {{this}} </a>
+                        <a href="/projects/{{../project.id}}/tasks?page={{this}}" class="bg-white border-gray-300 text-gray-500 hover:bg-gray-50 px-4 py-2 border text-sm font-medium"> {{this}} </a>
                     {{/if}}
                 {{/each}}
 
                 {{!-- next button --}}
-                <a {{#if (math pagination.currentPage '<' pagination.totalPages)}}href="/tasks?page={{math pagination.currentPage '+' 1}}" {{/if}} class="{{#if (math pagination.currentPage '===' pagination.totalPages)}}cursor-not-allowed{{/if}} px-2 py-2 rounded-r-md border border-gray-300 bg-white text-sm font-medium text-gray-500 hover:bg-gray-50">
+                <a {{#if (math pagination.currentPage '<' pagination.totalPages)}}href="/projects/{{project.id}}/tasks?page={{math pagination.currentPage '+' 1}}" {{/if}} class="{{#if (math pagination.currentPage '===' pagination.totalPages)}}cursor-not-allowed{{/if}} px-2 py-2 rounded-r-md border border-gray-300 bg-white text-sm font-medium text-gray-500 hover:bg-gray-50">
                     <!-- Heroicon name: solid/chevron-right -->
                     <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="{{#if (math pagination.currentPage '===' pagination.totalPages)}}#dddddd{{else}}currentColor{{/if}}" aria-hidden="true">
                         <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd" />
